git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis@416 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -721,10 +721,10 @@
     <Compile Include="Form\ALD\RadFAldCim10Selecteur.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form\Antecedent\RadFAntecedentAffectationSelecteur.Designer.vb">
+    <Compile Include="Form\Obsolete\RadFAntecedentAffectationSelecteur.Designer.vb">
       <DependentUpon>RadFAntecedentAffectationSelecteur.vb</DependentUpon>
     </Compile>
-    <Compile Include="Form\Antecedent\RadFAntecedentAffectationSelecteur.vb">
+    <Compile Include="Form\Obsolete\RadFAntecedentAffectationSelecteur.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form\Antecedent\RadFAntecedentHistoListe.Designer.vb">
@@ -1215,7 +1215,7 @@
     <EmbeddedResource Include="Form\ALD\RadFAldCim10Selecteur.resx">
       <DependentUpon>RadFAldCim10Selecteur.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form\Antecedent\RadFAntecedentAffectationSelecteur.resx">
+    <EmbeddedResource Include="Form\Obsolete\RadFAntecedentAffectationSelecteur.resx">
       <DependentUpon>RadFAntecedentAffectationSelecteur.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form\Antecedent\RadFAntecedentHistoListe.resx">
