--- a/UnitTest/packages.config
+++ b/UnitTest/packages.config
@@ -1,9 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BouncyCastle" version="1.8.2" targetFramework="net472" />
   <package id="DeepEqual" version="2.0.0" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net472" />
   <package id="MSTest.TestAdapter" version="2.1.1" targetFramework="net472" />
   <package id="MSTest.TestFramework" version="2.1.1" targetFramework="net472" />
+  <package id="Nethereum.Hex" version="3.7.1" targetFramework="net472" />
+  <package id="Nethereum.Model" version="3.7.1" targetFramework="net472" />
+  <package id="Nethereum.RLP" version="3.7.1" targetFramework="net472" />
+  <package id="Nethereum.Signer" version="3.7.1" targetFramework="net472" />
+  <package id="Nethereum.Util" version="3.7.1" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net472" />
   <package id="System.Collections.Immutable" version="1.3.0" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.3.0" targetFramework="net472" />
 </packages>
