git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis/branches/refactor@490 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/Oasis_Common/Oasis_Common.vbproj
+++ b/Oasis_Common/Oasis_Common.vbproj
@@ -95,7 +95,7 @@
     <Compile Include="ApiRest\ApiOasis.vb" />
     <Compile Include="ApiRest\Class1.vb" />
     <Compile Include="Bean\Antecedent\AldCim10.vb" />
-    <Compile Include="Bean\Antecedent\AldClass.vb" />
+    <Compile Include="Bean\Antecedent\Ald.vb" />
     <Compile Include="Bean\Antecedent\Antecedent.vb" />
     <Compile Include="Bean\Antecedent\AntecedentCourrier.vb" />
     <Compile Include="Bean\Antecedent\AntecedentDeplacement.vb" />
