git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis/branches/refactor@494 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -225,6 +225,7 @@
     <Compile Include="Form\DRC\RadFAutoSuivi.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Form\Episode\EpisodeUtils.vb" />
     <Compile Include="Form\RendezVous\RadFListeIntervenantSansRDV.Designer.vb">
       <DependentUpon>RadFListeIntervenantSansRDV.vb</DependentUpon>
     </Compile>
