--- a/Oasis_Common/packages.config
+++ b/Oasis_Common/packages.config
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="BouncyCastle" version="1.8.2" targetFramework="net472" />
+  <package id="BouncyCastle" version="1.8.6.1" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
-  <package id="Nethereum.Hex" version="3.7.1" targetFramework="net472" />
-  <package id="Nethereum.Model" version="3.7.1" targetFramework="net472" />
-  <package id="Nethereum.RLP" version="3.7.1" targetFramework="net472" />
-  <package id="Nethereum.Signer" version="3.7.1" targetFramework="net472" />
-  <package id="Nethereum.Util" version="3.7.1" targetFramework="net472" />
+  <package id="Nethereum.Hex" version="3.8.0" targetFramework="net472" />
+  <package id="Nethereum.Model" version="3.8.0" targetFramework="net472" />
+  <package id="Nethereum.RLP" version="3.8.0" targetFramework="net472" />
+  <package id="Nethereum.Signer" version="3.8.0" targetFramework="net472" />
+  <package id="Nethereum.Util" version="3.8.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="System.Drawing.Common" version="4.7.0" targetFramework="net472" />
 </packages>
