--- a/oasis/packages.config
+++ b/oasis/packages.config
@@ -22,5 +22,5 @@
   <package id="QRCoder" version="1.3.9" targetFramework="net472" />
   <package id="System.Collections.NonGeneric" version="4.3.0" targetFramework="net472" />
   <package id="System.ComponentModel.Primitives" version="4.3.0" targetFramework="net472" />
-  <package id="System.ComponentModel.TypeConverter" version="4.3.0" targetFramework="net472" />
+  <package id="System.Drawing.Common" version="4.7.0" targetFramework="net48" />
 </packages>
