--- a/Oasis_Common/Oasis_Common.vbproj
+++ b/Oasis_Common/Oasis_Common.vbproj
@@ -114,6 +114,7 @@
     <Compile Include="Bean\Episode\EpisodeObservation.vb" />
     <Compile Include="Bean\Episode\EpisodeParametre.vb" />
     <Compile Include="Bean\Episode\EpisodeTypeActivite.vb" />
+    <Compile Include="Bean\Internaute\Internaute.vb" />
     <Compile Include="Bean\LigneDeVie\LigneDeVie.vb" />
     <Compile Include="Bean\LigneDeVie\PatientParametreLdv.vb" />
     <Compile Include="Bean\Log\Log.vb" />
@@ -189,6 +190,7 @@
     <Compile Include="Dao\Episode\EpisodeProtocoleCollaboratifDao.vb" />
     <Compile Include="Dao\Episode\EpisodeTypeActiviteDao.vb" />
     <Compile Include="Dao\General\ParametreOasisDao.vb" />
+    <Compile Include="Dao\Internaute\InternauteDao.vb" />
     <Compile Include="Dao\LigneDeVie\PatientParametreLdvDao.vb" />
     <Compile Include="Dao\Log\LogDao.vb" />
     <Compile Include="Dao\Medicament\MedicamentDao.vb" />
