git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis/branches/web_sign@509 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/Oasis_Common/Oasis_Common.vbproj
+++ b/Oasis_Common/Oasis_Common.vbproj
@@ -114,6 +114,7 @@
     <Compile Include="Bean\Episode\EpisodeObservation.vb" />
     <Compile Include="Bean\Episode\EpisodeParametre.vb" />
     <Compile Include="Bean\Episode\EpisodeTypeActivite.vb" />
+    <Compile Include="Bean\Internaute\InternautePermission.vb" />
     <Compile Include="Bean\Internaute\Internaute.vb" />
     <Compile Include="Bean\LigneDeVie\LigneDeVie.vb" />
     <Compile Include="Bean\LigneDeVie\PatientParametreLdv.vb" />
@@ -190,6 +191,7 @@
     <Compile Include="Dao\Episode\EpisodeProtocoleCollaboratifDao.vb" />
     <Compile Include="Dao\Episode\EpisodeTypeActiviteDao.vb" />
     <Compile Include="Dao\General\ParametreOasisDao.vb" />
+    <Compile Include="Dao\Internaute\InternautePermissionDao.vb" />
     <Compile Include="Dao\Internaute\InternauteDao.vb" />
     <Compile Include="Dao\LigneDeVie\PatientParametreLdvDao.vb" />
     <Compile Include="Dao\Log\LogDao.vb" />
