--- a/Oasis_Web/Oasis_Web.vbproj
+++ b/Oasis_Web/Oasis_Web.vbproj
@@ -395,16 +395,16 @@
     <Content Include="Views\Shared\Layouts\_layout_light_sidebar.cshtml" />
     <Content Include="Views\Shared\Layouts\_layout_preloader.cshtml" />
     <Content Include="Views\Shared\_BlankLayout.cshtml" />
-    <Content Include="Views\Shared\_footer.cshtml" />
+    <None Include="Views\Shared\_footer.vbhtml" />
     <Content Include="Views\Shared\_head_css.cshtml" />
     <Content Include="Views\Shared\_horizontal.cshtml" />
-    <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Shared\_page_title.cshtml" />
-    <Content Include="Views\Shared\_right_sidebar.cshtml" />
-    <Content Include="Views\Shared\_sidebar.cshtml" />
+    <None Include="Views\Shared\_Layout.vbhtml" />
+    <None Include="Views\Shared\_page_title.vbhtml" />
+    <None Include="Views\Shared\_right_sidebar.vbhtml" />
+    <None Include="Views\Shared\_sidebar.vbhtml" />
     <Content Include="Views\Shared\_title_meta.cshtml" />
-    <Content Include="Views\Shared\_topbar.cshtml" />
-    <Content Include="Views\Shared\_vendor_scripts.cshtml" />
+    <None Include="Views\Shared\_topbar.vbhtml" />
+    <None Include="Views\Shared\_vendor_scripts.vbhtml" />
     <Content Include="Views\Pages\pages-404.cshtml" />
     <Content Include="Views\Pages\pages-500.cshtml" />
     <Content Include="Views\Pages\pages-comingsoon.cshtml" />
