--- a/Oasis_Web/Web.config
+++ b/Oasis_Web/Web.config
@@ -17,6 +17,9 @@
     <add name="Oasis_WF.My.MySettings.oasisConnection" connectionString="Data Source=ns3119889.ip-51-38-181.eu;Initial Catalog=oasis;persist security info=True;user id=sa;password=Oasis-689;encrypt=true;trustServerCertificate=true;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
+	  <authentication mode="Forms">
+		  <forms cookieless="UseCookies" loginUrl="~/Auth/Login" slidingExpiration="true"></forms>
+	  </authentication>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
