git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis/branches/web_sign@510 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/Oasis_Web/Web.config
+++ b/Oasis_Web/Web.config
@@ -18,7 +18,7 @@
   </connectionStrings>
   <system.web>
 	  <authentication mode="Forms">
-		  <forms cookieless="UseCookies" loginUrl="~/Auth/Login" slidingExpiration="true"></forms>
+		  <forms cookieless="UseCookies" loginUrl="~/Auth/Login" slidingExpiration="true" timeout="2880"></forms>
 	  </authentication>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
