git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis/branches/web_sign@513 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -1268,6 +1268,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form\Antecedent\RadFAntecedentDetailEdit.resx">
       <DependentUpon>RadFAntecedentDetailEdit.vb</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Form\Obsolete\RadFMedocSelecteur.resx">
       <DependentUpon>RadFMedocSelecteur.vb</DependentUpon>
