git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis/branches/web_sign@517 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/oasis/App.config
+++ b/oasis/App.config
@@ -1,15 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="Oasis_WF.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+      <section name="Oasis_WF.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
   </configSections>
   <connectionStrings>
-  <add name="Oasis_WF.My.MySettings.oasisConnection" connectionString="" providerName="System.Data.SqlClient"/>
+  <add name="Oasis_WF.My.MySettings.oasisConnection" connectionString="" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <applicationSettings>
     <Oasis_WF.My.MySettings>
@@ -22,59 +22,59 @@
     </Oasis_WF.My.MySettings>
   </applicationSettings>
   <appSettings>
-    <add key="ServeurOasis" value="ns3119889.ip-51-38-181.eu"/>
-    <add key="horizonTraitementObsolete" value="3"/>
+    <add key="ServeurOasis" value="ns3119889.ip-51-38-181.eu" />
+    <add key="horizonTraitementObsolete" value="3" />
     <!--< en années -->
-    <add key="longueurStringAllergie" value="12"/>
-    <add key="drcIdConclusionIde" value="128001"/>
-    <add key="drcIdStrategieContextuelleParDefaut" value="200003"/>
-    <add key="drcIdMesurePreventiveParDefaut" value="300017"/>
-    <add key="organisation" value="Oasis"/>
-    <add key="dureeRendezVous" value="15"/>
+    <add key="longueurStringAllergie" value="12" />
+    <add key="drcIdConclusionIde" value="128001" />
+    <add key="drcIdStrategieContextuelleParDefaut" value="200003" />
+    <add key="drcIdMesurePreventiveParDefaut" value="300017" />
+    <add key="organisation" value="Oasis" />
+    <add key="dureeRendezVous" value="15" />
     <!--< en minutes -->
-    <add key="limiteAgeEnfant" value="16"/>
-    <add key="AgeMinPreventionFemme" value="12"/>
-    <add key="DrcIdGrossesse" value="833"/>
-    <add key="ClientSettingsProvider.ServiceUri" value=""/>
-    <add key="ParametreIdTaille" value="2"/>
-    <add key="ParametreIdIMC" value="3"/>
-    <add key="ParametreIdPAM" value="8"/>
-    <add key="AgeAdulteHomme" value="20"/>
-    <add key="AgeAdulteFemme" value="15"/>
-    <add key="DelaiDefautReponseSousEpisode" value="15"/>
-    <add key="CheminTelechargement" value="c:\oasis\telechargement"/>
-    <add key="IdUserAuto" value="1"/>
-    <add key="FonctionEmetteurAutoId" value="14"/>
-    <add key="DureeRendezVousParDefaut" value="15"/>
-    <add key="PeriodeNonDelivrance" value="15"/>
-    <add key="SpecialiteDelaiPriseEnCharge" value="90"/>
-    <add key="ContactAdministrateur" value="En cas de problème contactez l'administrateur au xx xx xx xx xx - Mail : admin.contact@oasis.fr"/>
+    <add key="limiteAgeEnfant" value="16" />
+    <add key="AgeMinPreventionFemme" value="12" />
+    <add key="DrcIdGrossesse" value="833" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
+    <add key="ParametreIdTaille" value="2" />
+    <add key="ParametreIdIMC" value="3" />
+    <add key="ParametreIdPAM" value="8" />
+    <add key="AgeAdulteHomme" value="20" />
+    <add key="AgeAdulteFemme" value="15" />
+    <add key="DelaiDefautReponseSousEpisode" value="15" />
+    <add key="CheminTelechargement" value="c:\oasis\telechargement" />
+    <add key="IdUserAuto" value="1" />
+    <add key="FonctionEmetteurAutoId" value="14" />
+    <add key="DureeRendezVousParDefaut" value="15" />
+    <add key="PeriodeNonDelivrance" value="15" />
+    <add key="SpecialiteDelaiPriseEnCharge" value="90" />
+    <add key="ContactAdministrateur" value="En cas de problème contactez l'administrateur au xx xx xx xx xx - Mail : admin.contact@oasis.fr" />
   </appSettings>
   <system.web>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
       <providers>
-        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri=""/>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
       </providers>
     </membership>
     <roleManager defaultProvider="ClientRoleProvider" enabled="true">
       <providers>
-        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400"/>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
       </providers>
     </roleManager>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0"/>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="BouncyCastle.Crypto" publicKeyToken="0e99375e54769942" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-1.8.6.0" newVersion="1.8.6.0"/>
+        <assemblyIdentity name="BouncyCastle.Crypto" publicKeyToken="0e99375e54769942" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.8.6.0" newVersion="1.8.6.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Drawing.Common" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-4.0.0.1" newVersion="4.0.0.1"/>
+        <assemblyIdentity name="System.Drawing.Common" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.1" newVersion="4.0.0.1" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
