git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis/branches/web@548 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/Oasis_Web/Oasis_Web.vbproj
+++ b/Oasis_Web/Oasis_Web.vbproj
@@ -1611,6 +1611,7 @@
     <Content Include="Views\Pages\pages-pricing.cshtml" />
     <Content Include="Views\Pages\pages-starter.cshtml" />
     <Content Include="Views\Pages\pages-timeline.cshtml" />
+    <Content Include="Views\AutoSuivi\Index.vbhtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="favicon.ico" />
