git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis/branches/web@550 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/Oasis_Web/Oasis_Web.vbproj
+++ b/Oasis_Web/Oasis_Web.vbproj
@@ -192,6 +192,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.vb" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.vb" />
     <Compile Include="Constants.vb" />
+    <Compile Include="Controllers\SyntheseController.vb" />
     <Compile Include="Controllers\AutoSuiviController.vb" />
     <Compile Include="Controllers\DocFileUploadController.vb" />
     <Compile Include="Controllers\DocFileDownloadController.vb" />
@@ -1612,6 +1613,7 @@
     <Content Include="Views\Pages\pages-starter.cshtml" />
     <Content Include="Views\Pages\pages-timeline.cshtml" />
     <Content Include="Views\AutoSuivi\Index.vbhtml" />
+    <Content Include="Views\Synthese\Index.vbhtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="favicon.ico" />
