git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis/branches/web@567 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/Oasis_Web/Oasis_Web.vbproj
+++ b/Oasis_Web/Oasis_Web.vbproj
@@ -1593,7 +1593,7 @@
     <Content Include="Views\Shared\Layouts\_layout_icon_sidebar.cshtml" />
     <Content Include="Views\Shared\Layouts\_layout_light_sidebar.cshtml" />
     <Content Include="Views\Shared\Layouts\_layout_preloader.cshtml" />
-    <None Include="Views\Shared\_BlankLayout.vbhtml" />
+    <None Include="Views\Shared\_BlankLayout.cshtml" />
     <Content Include="Views\Shared\_footer.vbhtml" />
     <None Include="Views\Shared\_head_css.cshtml" />
     <None Include="Views\Shared\_horizontal.vbhtml" />
