git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis/branches/web@569 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/Oasis_Web/Oasis_Web.vbproj
+++ b/Oasis_Web/Oasis_Web.vbproj
@@ -1463,8 +1463,8 @@
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
     </None>
-    <None Include="My Project\PublishProfiles\CustomProfile.pubxml" />
     <None Include="My Project\PublishProfiles\FolderProfile.pubxml" />
+    <None Include="My Project\PublishProfiles\WebAppProfile.pubxml" />
     <None Include="My Project\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <CustomToolNamespace>My</CustomToolNamespace>
