git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis/branches/web@573 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/Oasis_Web/Oasis_Web.vbproj
+++ b/Oasis_Web/Oasis_Web.vbproj
@@ -1583,7 +1583,7 @@
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Auth\login.vbhtml" />
     <Content Include="Views\Auth\auth-recoverpw.cshtml" />
-    <Content Include="Views\Auth\auth-register.cshtml" />
+    <None Include="Views\Auth\auth-register.vbhtml" />
     <Content Include="Views\Dashboard\Index.vbhtml" />
     <None Include="Views\Shared\Error.vbhtml" />
     <Content Include="Views\Shared\Layouts\_layout_boxed.cshtml" />
